decomposeわかりません

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -5,7 +5,7 @@
     <title>ToDo App created "Jetpack Compose for Web"</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-<body style="margin: 0;">
+<body>
 <div id="root"></div>
 <script src="main.js"></script>
 </body>
